--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react_paginator",
-  "version": "1.0.7",
+  "version": "1.0.9",
   "description": "react-paginator React component to create a good pagination system",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -18,7 +18,9 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {},
+  "dependencies": {
+    "prop-types": "^15.5.10"
+  },
   "peerDependencies": {
     "react": "15.x"
   },
